--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.8">
-        <meta charset="utf-8">
-        <title>BLS Web</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="cube">
-            <div class="top"></div>
-            <div>
-                <span style="--i: 0;">
-                    <h2>JOIN</h2>
-                    <h2 style="color: #151515;">JOIN</h2>
-                </span>
-                <span style="--i: 1;">
-                    <h2>BLS</h2>
-                    <h2>BLS</h2>
-                </span>
-                <span style="--i: 2;">
-                    <h2>WEB</h2>
-                    <h2>WEB</h2>
-                </span>
-                <span style="--i: 3;">
-                    <h2>NOW</h2>
-                    <h2>NOW</h2>
-                </span>
-            </div>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.8">
+    <meta charset="utf-8">
+    <title>BLS Web</title>
+    <link rel="stylesheet" href="background.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Updates</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Join</a></li>
+        </ul>
+    </nav>
+    <div class="space">
+  <div class="particle"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+</div>
+<div class="cube-container">
+    <div class="cube">
+        <div class="top"></div>
+        <div>
+            <span style="--i: 0;">
+                <h2>JOIN</h2>
+                <h2 style="color: #151515;">JOIN</h2>
+            </span>
+            <span style="--i: 1;">
+                <h2>BLS</h2>
+                <h2>BLS</h2>
+            </span>
+            <span style="--i: 2;">
+                <h2>WEB</h2>
+                <h2>WEB</h2>
+            </span>
+            <span style="--i: 3;">
+                <h2>NOW</h2>
+                <h2>NOW</h2>
+            </span>
         </div>
-    </body> 
+    </div>
+</div>
+</body> 
 </html>
