--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>BLS Web Development</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/logo.jpg">
+    <link href="img/favicon.png" rel="icon">
+    <img src="img/logo.jpg" alt="logo" class="logo">
 </head>
 <body>
     <a href="https://hackclub.com">
@@ -14,9 +15,9 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="pages/resources.html">Resources</a></li>
-            <li><a href="pages/join.html">Join</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
     <!-- Credits Here : https://codepen.io/marcell0lopes/pen/oNemQmB -->
