--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </a>
     <nav class="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" style="color: #A8DADC;">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="join.html">Join</a></li>
