--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" style="color: #A8DADC;">About</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
