--- a/join.html
+++ b/join.html
@@ -17,7 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="join.html">Join</a></li>
+            <li><a href="join.html" style="color: #A8DADC;">Join</a></li>
         </ul>
     </nav>
     <script src="main.js"></script>
