--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li><a href="resources.html" style="color: #A8DADC;">Resources</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
