--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.8">
     <meta charset="utf-8">
     <title>BLS - About</title>
-    <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="about.css">
     <link href="img/favicon.png" rel="icon">
     <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
 <body>
-    <a href="https://hackclub.com">
+    <a href="index.html">
         <img src="img/logo.jpg" alt="logo" class="logo">
     </a>
     <nav class="navbar">
@@ -20,6 +20,76 @@
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
+    <section>
+        <div class="container">
+          <div class="accordion">
+            <div class="accordion-item" id="question1">
+                <a class="accordion-link" href="#question1">
+                    <div class="flex">
+                      <h3>OFFICER BOARD</h3>
+                      <ul>
+                      </ul>
+                    </div>
+                    <i class="icon ion-md-arrow-forward"></i>
+                    <i class="icon ion-md-arrow-down"></i>
+                  </a>
+                  <div class="answer">
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Vinh Tran : President</p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Ayman : Internal Liaison</p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Sebastian : External Liaison</p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Jiebin Fang : Secretary</p>
+                    <br>
+                  </div>
+              <hr>
+          </div>
+            <div class="accordion-item" id="question2">
+              <a class="accordion-link" href="#question2">
+                <div class="flex">
+                  <h3>WHO ARE WE ?</h3>
+                  <ul>
+                  </ul>
+                </div>
+                <i class="icon ion-md-arrow-forward"></i>
+                <i class="icon ion-md-arrow-down"></i>
+              </a>
+              <div class="answer">
+                <p>Web Development Club at Boston Latin is committed to fostering a collaborative and educational environment where students can explore and learn front-end design. Through a series of resources that we provide, we hope to encourage members to build their own portfolios, games, and websites.</p>
+              </div>
+              <hr>
+          </div>
+            <div class="accordion-item" id="question3">
+              <a class="accordion-link" href="#question3">
+                <div class="flex">
+                  <h3>DO I NEED TO BE GOOD AT CODING ?</h3>
+                  <ul>
+                  </ul>
+                </div>
+                <i class="icon ion-md-arrow-forward"></i>
+                <i class="icon ion-md-arrow-down"></i>
+              </a>
+              <div class="answer">
+                <p>Inclusivity is a core value in BLS Web, we welcome all programmers to join us. All meetings will be summarized and put onto the website, so even if you miss a meeting, you can still catch up! We hope to create a safe environment to learn and improve, so even if you're experienced, there's always room to be better.</p>
+              </div>
+              <hr>
+          </div>
+            <div class="accordion-item" id="question4">
+              <a class="accordion-link" href="#question4">
+                <div>
+                  <h3>WHEN DO YOU GUYS MEET ?</h3>
+                  <ul>
+                  </ul>
+                </div>
+                <i class="icon ion-md-arrow-forward"></i>
+                <i class="icon ion-md-arrow-down"></i>
+              </a>
+              <div class="answer">
+                <p>Meetings will be held in room 306 every Monday in Dr.Nguyen's room. Future meetings or cancelled ones will always be reported via email. With any questions, get in touch with any of the board members.</p>
+              </div>
+              <hr>
+          </div>
+         </div>
+        </div>
+      </section>
     <script src="main.js"></script>
 </body> 
 </html>
