--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="img/logo.jpg" alt="logo" class="logo">
 </head>
 <body>
-    <a href="https://hackclub.com">
+    <a href="index.html">
         <img src="img/logo.jpg" alt="logo" class="logo">
     </a>
     <nav class="navbar">
@@ -20,7 +20,6 @@
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
-    <!-- Credits Here : https://codepen.io/marcell0lopes/pen/oNemQmB -->
     <div class="main">
         <h1><strong>You should join : </strong><div class="roller">
           <span id="rolltext">BLS<br/>
