--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
 <body>
-    <a href="https://hackclub.com">
+    <a href="index.html">
         <img src="img/logo.jpg" alt="logo" class="logo">
     </a>
     <nav class="navbar">
