updated officer alignment

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
                 <a class="accordion-link" href="#question1">
                     <div class="flex">
                       <h3>OFFICER BOARD</h3>
+                      <br>
                       <ul>
                       </ul>
                     </div>
@@ -34,11 +35,12 @@
                     <i class="icon ion-md-arrow-down"></i>
                   </a>
                   <div class="answer">
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Vinh Tran : President</p>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Ayman : Internal Liaison</p>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Sebastian : External Liaison</p>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;">Jiebin Fang : Secretary</p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Vinh Tran</b> : President <i>'25</i></p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Jiebin Fang</b> : Secretary <i>'25</i></p>
                     <br>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Ayman</b> : Internal Liaison <i>'25</i></p>
+                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Sebastian Inezian</b> : External Liaison <i>'25</i></p>
+                    <br><br>
                   </div>
               <hr>
           </div>
