--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>BLS - Resources</title>
     <link href="img/favicon.png" rel="icon">
-    <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="resources.css">
     <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
 <body>
@@ -20,6 +20,13 @@
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
+    <!-- <h1>Introductions</h1>
+    <h1>HTML</h1>
+    <h1>CSS</h1>
+    <h1>Javascript</h1>
+    <h1>Wireframes</h1>
+    <h1>Website Template</h1>
+    <h1>Projects Resources</h1> -->
     <script src="main.js"></script>
 </body> 
 </html>
