updated about page

--- a/about.html
+++ b/about.html
@@ -8,90 +8,64 @@
     <link href="img/favicon.png" rel="icon">
     <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
+<nav class="navbar">
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html" style="color: #A8DADC;">About</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="join.html">Join</a></li>
+  </ul>
+</nav>
 <body>
     <a href="index.html">
         <img src="img/logo.jpg" alt="logo" class="logo">
     </a>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" style="color: #A8DADC;">About</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="join.html">Join</a></li>
-        </ul>
-    </nav>
-    <section>
-        <div class="container">
-          <div class="accordion">
-            <div class="accordion-item" id="question1">
-                <a class="accordion-link" href="#question1">
-                    <div class="flex">
-                      <h3>OFFICER BOARD</h3>
-                      <br>
-                      <ul>
-                      </ul>
-                    </div>
-                    <i class="icon ion-md-arrow-forward"></i>
-                    <i class="icon ion-md-arrow-down"></i>
-                  </a>
-                  <div class="answer">
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Vinh Tran</b> : President <i>'25</i></p>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Jiebin Fang</b> : Secretary <i>'25</i></p>
-                    <br>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Ayman</b> : Internal Liaison <i>'25</i></p>
-                    <p style="padding: 0;"><img src="img/logo.jpg" style="width: 50px; vertical-align: middle; border-radius: 50%;"><b>Sebastian Inezian</b> : External Liaison <i>'25</i></p>
-                    <br><br>
-                  </div>
-              <hr>
+    <div class="cards-container">
+      <div class="cards">
+        <h2 class="header" style="color:#573393;">Meet Our Officers</h2><br><hr><br>
+        <div class="services">
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Vinh Tran</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
           </div>
-            <div class="accordion-item" id="question2">
-              <a class="accordion-link" href="#question2">
-                <div class="flex">
-                  <h3>WHO ARE WE ?</h3>
-                  <ul>
-                  </ul>
-                </div>
-                <i class="icon ion-md-arrow-forward"></i>
-                <i class="icon ion-md-arrow-down"></i>
-              </a>
-              <div class="answer">
-                <p>Web Development Club at Boston Latin is committed to fostering a collaborative and educational environment where students can explore and learn front-end design. Through a series of resources that we provide, we hope to encourage members to build their own portfolios, games, and websites.</p>
-              </div>
-              <hr>
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Jolia Tsan</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
           </div>
-            <div class="accordion-item" id="question3">
-              <a class="accordion-link" href="#question3">
-                <div class="flex">
-                  <h3>DO I NEED TO BE GOOD AT CODING ?</h3>
-                  <ul>
-                  </ul>
-                </div>
-                <i class="icon ion-md-arrow-forward"></i>
-                <i class="icon ion-md-arrow-down"></i>
-              </a>
-              <div class="answer">
-                <p>Inclusivity is a core value in BLS Web, we welcome all programmers to join us. All meetings will be summarized and put onto the website, so even if you miss a meeting, you can still catch up! We hope to create a safe environment to learn and improve, so even if you're experienced, there's always room to be better.</p>
-              </div>
-              <hr>
-          </div>
-            <div class="accordion-item" id="question4">
-              <a class="accordion-link" href="#question4">
-                <div>
-                  <h3>WHEN DO YOU GUYS MEET ?</h3>
-                  <ul>
-                  </ul>
-                </div>
-                <i class="icon ion-md-arrow-forward"></i>
-                <i class="icon ion-md-arrow-down"></i>
-              </a>
-              <div class="answer">
-                <p>Meetings will be held in room 306 every Monday in Dr.Nguyen's room. Future meetings or cancelled ones will always be reported via email. With any questions, get in touch with any of the board members.</p>
-              </div>
-              <hr>
-          </div>
-         </div>
         </div>
-      </section>
-    <script src="main.js"></script>
+      </div>
+      <div class="cards">
+        <div class="services">
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Sebastian Inezian</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Ayman Amin</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Jiebin Fang</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+        </div>
+      </div>
+      <div class="cards">
+        <h2 class="header" style="color:#573393;">Questions</h2><br><hr><br>
+        <div class="services">
+          <div class="content content-1">
+            <div class="fab fa-twitter"></div>
+            <h2>Vinh Tran</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+        </div>
+      </div>
+  </body>
+  <script src="main.js"></script>
 </body> 
 </html>
