--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>BLS - About</title>
     <link rel="stylesheet" href="about.css">
-    <link href="img/favicon.png" rel="icon">
-    <link rel="icon" type="image/x-icon" href="img/logo.jpg">
+    <link href="img/favicon.ico" rel="icon">
 </head>
 <nav class="navbar">
   <ul>
@@ -18,53 +17,95 @@
 </nav>
 <body>
     <a href="index.html">
-        <img src="img/logo.jpg" alt="logo" class="logo">
+        <img src="img/logo.png" alt="logo" class="logo">
     </a>
+    <br><h1 class="header" style="color: #573393; text-align: center;">Meet Our Officers</h1><br><hr><br>
     <div class="cards-container">
       <div class="cards">
-        <h2 class="header" style="color:#573393;">Meet Our Officers</h2><br><hr><br>
+        <div class="services">
+          <div class="content content-2">
+            <div class="pics"><img src="img/vinh.jpg"></div>
+            <h2>Vinh Tran</h2>
+            <p>President <i>'25</i></p>
+          </div>
+          <div class="content content-3">
+            <div class="pics"><img src="img/jolia.jpg"></div>
+            <h2>Jolia Tsan</h2>
+            <p>Vice-President <i>'25</i></p>
+          </div>
+        </div>
+      </div>
+      <div class="cards">
         <div class="services">
           <div class="content content-1">
-            <div class="fab fa-twitter"></div>
+            <div class="pics"><img src="img/sebastian.png"></div>
+            <h2>Sebastian Inezian</h2>
+            <p>Secretary <i>'25</i></p>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/ayman.png"></div>
+            <h2>Ayman Amin</h2>
+            <p>External Liaison <i>'25</i></p>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/joe.jpg"></div>
+            <h2>Joe Li</h2>
+            <p>Internal Liaison <i>'25</i></p>
+          </div>
+        </div>
+      </div><br>
+      <hr><br><h1 class="header" style="color:#573393;">Mission Statement</h1><br><hr><br>
+      <div class="cards">
+        <div class="services" style="padding-left: 100px; padding-right: 100px;">
+          <div class="content content-1">
+            <p style="text-align: center;">
+              <img src="img/logo.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
+            </p>
+          </div>
+        </div>
+      </div><br>
+      <hr><br><h1 class="header" style="color:#573393;">Questions</h1><br><hr><br>
+      <div class="cards">
+        <div class="services">
+          <div class="content content-1">
+            <div></div>
             <h2>Vinh Tran</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
           </div>
           <div class="content content-1">
-            <div class="fab fa-twitter"></div>
+            <div></div>
             <h2>Jolia Tsan</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
           </div>
         </div>
-      </div>
-      <div class="cards">
         <div class="services">
           <div class="content content-1">
-            <div class="fab fa-twitter"></div>
-            <h2>Sebastian Inezian</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
-          </div>
-          <div class="content content-1">
-            <div class="fab fa-twitter"></div>
-            <h2>Ayman Amin</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
-          </div>
-          <div class="content content-1">
-            <div class="fab fa-twitter"></div>
-            <h2>Jiebin Fang</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
-          </div>
-        </div>
-      </div>
-      <div class="cards">
-        <h2 class="header" style="color:#573393;">Questions</h2><br><hr><br>
-        <div class="services">
-          <div class="content content-1">
-            <div class="fab fa-twitter"></div>
+            <div></div>
             <h2>Vinh Tran</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
           </div>
+          <div class="content content-1">
+            <div></div>
+            <h2>Jolia Tsan</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
         </div>
-      </div>
+        <div class="services">
+          <div class="content content-1">
+            <div></div>
+            <h2>Vinh Tran</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+          <div class="content content-1">
+            <div></div>
+            <h2>Jolia Tsan</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+          </div>
+        </div>
+      </div><br>
   </body>
   <script src="main.js"></script>
 </body> 
