--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <title>BLS Web Development</title>
     <link rel="stylesheet" href="style.css">
-    <link href="img/favicon.png" rel="icon">
-    <img src="img/logo.jpg" alt="logo" class="logo">
+    <link href="img/favicon.ico" rel="icon">
 </head>
 <body>
     <a href="index.html">
-        <img src="img/logo.jpg" alt="logo" class="logo">
+        <img src="img/logo.png" alt="logo" class="logo">
     </a>
     <nav class="navbar">
         <ul>
