--- a/resources.html
+++ b/resources.html
@@ -4,13 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.8">
     <meta charset="utf-8">
     <title>BLS - Resources</title>
-    <link href="img/favicon.png" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
     <link rel="stylesheet" href="resources.css">
     <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
 <body>
     <a href="index.html">
-        <img src="img/logo.jpg" alt="logo" class="logo">
+        <img src="img/logo.png" alt="logo" class="logo">
     </a>
     <nav class="navbar">
         <ul>
