--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <a href="index.html">
         <img src="img/logo.png" alt="logo" class="logo">
     </a>
-    <br><h1 class="header" style="color: #573393; text-align: center;">Meet Our Officers</h1><br><hr><br>
+    <br><h1 class="header" style="color: #573393; text-align: center;">Meet Our Officers</h1><br><hr style="margin-left: 7%; width: 86%;"><br>
     <div class="cards-container">
       <div class="cards">
         <div class="services">
@@ -54,10 +54,10 @@
           </div>
         </div>
       </div><br>
-      <hr><br><h1 class="header" style="color:#573393;">Mission Statement</h1><br><hr><br>
+      <hr><br><h1 class="header" style="color:#573393;">Mission Statement</h1><br><hr>
       <div class="cards">
         <div class="services" style="padding-left: 100px; padding-right: 100px;">
-          <div class="content content-1">
+          <div class="content content-1" style="border: none;">
             <p style="text-align: center;">
               <img src="img/logo.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
@@ -66,7 +66,7 @@
             </p>
           </div>
         </div>
-      </div><br>
+      </div>
       <hr><br><h1 class="header" style="color:#573393;">Questions</h1><br><hr><br>
       <div class="cards">
         <div class="services">
