--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <div class="services" style="padding-left: 100px; padding-right: 100px;">
           <div class="content content-1" style="border: none;">
             <p style="text-align: center;">
-              <img src="img/logo.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
+              <img src="img/about.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
@@ -72,20 +72,20 @@
         <div class="services">
           <div class="content content-1">
             <div></div>
-            <h2>Vinh Tran</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+            <h2>Who Are We ?</h2>
+            <p>Web Development Club at Boston Latin is committed to fostering a collaborative and educational environment where students can explore and learn front-end design. Through a series of resources that we provide, we hope to encourage members to build their own portfolios, games, and websites.</p>
           </div>
           <div class="content content-1">
             <div></div>
-            <h2>Jolia Tsan</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+            <h2>Do I Need To Be Good At Coding ?</h2>
+            <p>Inclusivity is a core value in BLS Web, we welcome all programmers to join us. All meetings will be summarized and put onto the website, so even if you miss a meeting, you can still catch up! We hope to create a safe environment to learn and improve, so even if you're experienced, there's always room to be better.</p>
           </div>
         </div>
         <div class="services">
           <div class="content content-1">
             <div></div>
-            <h2>Vinh Tran</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+            <h2>When Do You Guys Meet ?</h2>
+            <p>Meetings will be held in room 306 every Monday in Dr.Nguyen's room. Future meetings or cancelled ones will always be reported via email. With any questions, get in touch with any of the board members.</p>
           </div>
           <div class="content content-1">
             <div></div>
