--- a/about.html
+++ b/about.html
@@ -89,20 +89,8 @@
           </div>
           <div class="content content-1">
             <div></div>
-            <h2>Jolia Tsan</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
-          </div>
-        </div>
-        <div class="services">
-          <div class="content content-1">
-            <div></div>
-            <h2>Vinh Tran</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
-          </div>
-          <div class="content content-1">
-            <div></div>
-            <h2>Jolia Tsan</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ullam aliquid non eligendi, nemo est neque reiciendis error?</p>
+            <h2>How Can I Get Started ?</h2>
+            <p>Getting started with us is very easy, we prioritize helping members make their first very own projects! Navigating to the resources page will lead you to various materials, including events we participate in, and guides on how to begin coding.</p>
           </div>
         </div>
       </div><br>
