--- a/resources.html
+++ b/resources.html
@@ -3,30 +3,133 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.8">
     <meta charset="utf-8">
-    <title>BLS - Resources</title>
+    <title>BLS - About</title>
+    <link rel="stylesheet" href="about.css">
     <link href="img/favicon.ico" rel="icon">
-    <link rel="stylesheet" href="resources.css">
-    <link rel="icon" type="image/x-icon" href="img/logo.jpg">
 </head>
+<nav class="navbar">
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="resources.html" style="color: #A8DADC;">Resources</a></li>
+      <li><a href="join.html">Join</a></li>
+  </ul>
+</nav>
 <body>
     <a href="index.html">
         <img src="img/logo.png" alt="logo" class="logo">
     </a>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resources.html" style="color: #A8DADC;">Resources</a></li>
-            <li><a href="join.html">Join</a></li>
-        </ul>
-    </nav>
-    <!-- <h1>Introductions</h1>
+    <br><h1 class="header" style="color: #573393; text-align: center;">External Participation</h1><h3 style="text-align: center;">Events and Hackathons that we would like our members to partake in will be posted here.</h3><br><hr style="margin-left: 7%; width: 86%;"><br>
+    <h2 style="text-align: left; margin-top: 0%; margin-bottom: -2%; margin-left: 10%;">Current Events:</h2>
+    <div class="cards-container">
+      <div class="cards">
+        <div class="services">
+          <div class="content content-1">
+            <div class="pics"><img src="img/launchhacks.png"></div>
+            <h2>LaunchHacks III</h2>
+            <p>Apr 5 – 7, 2024</p>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/educatehacks.png"></div>
+            <h2>EducateHacks</h2>
+            <p>Apr 5 – 7, 2024</p>
+          </div>
+        </div>
+        <h2 style="text-align: left; margin-top: .25%; margin-bottom: 0%; margin-left: 3%;">Past Events:</h2>
+        <div class="services">
+            <div class="content content-1">
+              <div class="pics"><img src="img/codegreen.png"></div>
+              <h2>Code Green Conference</h2>
+              <p>Dec 3 – 8, 2023</p>
+            </div>
+            <div class="content content-1">
+              <div class="pics"><img src="img/cornucadia.png"></div>
+              <h2>Cornucadia</h2>
+              <p>Nov 1 - 28, 2023</p>
+            </div>
+            <div class="content content-1">
+                <div class="pics"><img src="img/learnhacks.png"></div>
+                <h2>LearnHacks</h2>
+                <p>Nov 3 - 5, 2023</p>
+              </div>
+          </div>
+        </div><br>
+      <hr><br><h1 class="header" style="color:#573393;">Learning Materials</h1><br><hr><br>
+      <div class="cards">
+        <div class="services">
+          <div class="content content-1">
+            <div class="pics"><img src="img/html.png"></div>
+            <h2>HTML</h2>
+            <a href="https://www.youtube.com/watch?v=HD13eq_Pmp8&t=11s&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
+            <a href="https://www.codecademy.com/learn/learn-html" style="color: black;"><p>Interactive Guide</p></a>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/css.png"></div>
+            <h2>CSS</h2>
+            <a href="https://www.youtube.com/watch?v=wRNinF7YQqQ&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
+            <a href="https://www.codecademy.com/learn/learn-css" style="color: black;"><p>Interactive Guide</p></a>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/js.png"></div>
+            <h2>Javascript</h2>
+            <a href="https://www.youtube.com/watch?v=8dWL3wF_OMw&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
+            <a href="https://www.codecademy.com/learn/introduction-to-javascript" style="color: black;"><p>Interactive Guide</p></a>
+          </div>
+        </div>
+        <div class="services">
+            <div class="content content-1">
+              <div class="pics"><img src="img/figma.png"></div>
+              <h2>Wireframes</h2>
+              <a href="https://www.youtube.com/watch?v=c9Wg6Cb_YlU&ab_channel=freeCodeCamp.org" style="color: black;">Introduction to Figma</a>
+            </div>
+            <div class="content content-1">
+              <div class="pics"><img src="img/github.png"></div>
+              <h2>Digital Workspace</h2>
+              <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org" style="color: black;">Introduction to Github</a>
+            </div>
+          </div>
+      </div><br>
+      <hr><br><h1 class="header" style="color:#573393;">Club Assets</h1><h3 style="text-align: center;">Showcase of the work done by our members. Message an officer to have yours added!</h3><br><hr>
+      <div class="cards">
+        <div class="services">
+          <div class="content content-1">
+            <a href="https://vtran.org" style="color: black;"><h2>Personal Portfolio</h2></a>
+            <p>Vinh Tran</p>
+          </div>
+          <div class="content content-1">
+            <a href="https://v-iinh.github.io/the-two-of-us/" style="color: black;"><h2>The Two of Us</h2></a>
+            <p>Vinh Tran</p>
+          </div>
+          <div class="content content-1">
+            <a href="https://bstnpl.github.io/" style="color: black;"><h2>BLS Powerlifting</h2></a>
+            <p>Sebastian Inezian</p>
+          </div>
+        </div>
+        <div class="services">
+            <div class="content content-1">
+                <a href="https://fredyiscool.github.io" style="color: black;"><h2>Fredy is Cool</h2></a>
+                <p>Sebastian Inezian</p>
+            </div>
+            <div class="content content-1">
+                <a href="https://bigmikehelp.github.io/" style="color: black;"><h2>Big Mike Help</h2></a>
+                <p>Sebastian Inezian</p>
+            </div>
+            <div class="content content-1">
+                <a href="#" style="color: black;"><h2>Coming Soon</h2></a>
+                <p>To Be Added</p>
+            </div>
+          </div>
+      </div><br>
+    </div>
+    <script src="main.js"></script>
+</body> 
+</html>
+<!--
+    <h1>Events</h1>
     <h1>HTML</h1>
     <h1>CSS</h1>
     <h1>Javascript</h1>
     <h1>Wireframes</h1>
-    <h1>Website Template</h1>
-    <h1>Projects Resources</h1> -->
-    <script src="main.js"></script>
-</body> 
-</html>
+    <h1>Guide to Github</h1>
+    <h1>Club Assets</h1> 
+-->
