--- a/resources.html
+++ b/resources.html
@@ -123,4 +123,17 @@
     </div>
     <script src="main.js"></script>
 </body> 
+<footer>
+  <div class="footer-container">
+      <div class="footer-section">
+          <a href="#" style="color: #A8DADC;"><h3>Email</h3></a>
+      </div>
+      <div class="footer-section">
+        <a href="#" style="color: #A8DADC;"><h3>Discord</h3></a>
+      </div>
+      <div class="footer-section">
+        <a href="#" style="color: #A8DADC;"><h3>Join</h3></a>
+      </div>
+  </div>
+</footer>
 </html>
