--- a/resources.html
+++ b/resources.html
@@ -129,7 +129,7 @@
           <a href="#" style="color: #A8DADC;"><h3>Email</h3></a>
       </div>
       <div class="footer-section">
-        <a href="#" style="color: #A8DADC;"><h3>Discord</h3></a>
+        <a href="about.html" style="color: #A8DADC;"><h3>About</h3></a>
       </div>
       <div class="footer-section">
         <a href="#" style="color: #A8DADC;"><h3>Join</h3></a>
