--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <a href="#" style="color: #A8DADC;"><h3>Email</h3></a>
         </div>
         <div class="footer-section">
-          <a href="#" style="color: #A8DADC;"><h3>Discord</h3></a>
+          <a href="resources.html" style="color: #A8DADC;"><h3>Resources</h3></a>
         </div>
         <div class="footer-section">
           <a href="#" style="color: #A8DADC;"><h3>Join</h3></a>
