--- a/resources.html
+++ b/resources.html
@@ -111,7 +111,7 @@
                 <p>Sebastian Inezian</p>
             </div>
             <div class="content content-1">
-                <a href="https://bigmikehelp.github.io/" style="color: black;"><h2>Big Mike Help</h2></a>
+                <a href="#" style="color: black;"><h2>Big Mike Help</h2></a>
                 <p>Sebastian Inezian</p>
             </div>
             <div class="content content-1">
