--- a/resources.html
+++ b/resources.html
@@ -111,8 +111,8 @@
                 <p>Sebastian Inezian</p>
             </div>
             <div class="content content-1">
-                <a href="#" style="color: black;"><h2>Big Mike Help</h2></a>
-                <p>Sebastian Inezian</p>
+                <a href="#" style="color: black;"><h2>Coming Soon</h2></a>
+                <p>To Be Added</p>
             </div>
             <div class="content content-1">
                 <a href="#" style="color: black;"><h2>Coming Soon</h2></a>
