--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
             <p>President <i>'25</i></p>
           </div>
           <div class="content content-3">
-            <div class="pics"><img src="img/jolia.jpg"></div>
-            <h2>Jolia Tsan</h2>
-            <p>Vice-President <i>'25</i></p>
+            <div class="pics"><img src="img/will.jpg"></div>
+            <h2>William Liang </h2>
+            <p>Secretary <i>'25</i></p>
           </div>
         </div>
       </div>
@@ -40,16 +40,16 @@
           <div class="content content-1">
             <div class="pics"><img src="img/sebastian.png"></div>
             <h2>Sebastian Inezian</h2>
-            <p>Secretary <i>'25</i></p>
+            <p>Treasurer <i>'25</i></p>
+          </div>
+          <div class="content content-1">
+            <div class="pics"><img src="img/simon.jpg"></div>
+            <h2>Simon Ha</h2>
+            <p>External Liaison <i>'25</i></p>
           </div>
           <div class="content content-1">
             <div class="pics"><img src="img/ayman.png"></div>
             <h2>Ayman Amin</h2>
-            <p>External Liaison <i>'25</i></p>
-          </div>
-          <div class="content content-1">
-            <div class="pics"><img src="img/joe.jpg"></div>
-            <h2>Joe Li</h2>
             <p>Internal Liaison <i>'25</i></p>
           </div>
         </div>
