--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html" style="color: #A8DADC;">About</a></li>
       <li><a href="resources.html">Resources</a></li>
-      <li><a href="join.html">Join</a></li>
+      <li><a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit">Join</a></li>
   </ul>
 </nav>
 <body>
@@ -105,7 +105,7 @@
           <a href="resources.html" style="color: #A8DADC;"><h3>Resources</h3></a>
         </div>
         <div class="footer-section">
-          <a href="#" style="color: #A8DADC;"><h3>Join</h3></a>
+          <a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit" style="color: #A8DADC;"><h3>Join</h3></a>
         </div>
     </div>
   </footer>
