--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="index.html" style="color: #A8DADC;">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resources.html">Resources</a></li>
-            <li><a href="join.html">Join</a></li>
+            <li><a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit">Join</a></li>
         </ul>
     </nav>
     <div class="main">
