--- a/resources.html
+++ b/resources.html
@@ -12,7 +12,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="resources.html" style="color: #A8DADC;">Resources</a></li>
-      <li><a href="join.html">Join</a></li>
+      <li><a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit">Join</a></li>
   </ul>
 </nav>
 <body>
@@ -132,7 +132,7 @@
         <a href="about.html" style="color: #A8DADC;"><h3>About</h3></a>
       </div>
       <div class="footer-section">
-        <a href="#" style="color: #A8DADC;"><h3>Join</h3></a>
+        <a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit" style="color: #A8DADC;"><h3>Join</h3></a>
       </div>
   </div>
 </footer>
