updated text + margins

--- a/about.html
+++ b/about.html
@@ -29,6 +29,11 @@
             <p>President <i>'25</i></p>
           </div>
           <div class="content content-3">
+            <div class="pics"><img src="img/jolia.jpg"></div>
+            <h2>Jolia Tsan </h2>
+            <p>Vice - President <i>'25</i></p>
+          </div>
+          <div class="content content-3">
             <div class="pics"><img src="img/will.jpg"></div>
             <h2>William Liang </h2>
             <p>Secretary <i>'25</i></p>
@@ -60,9 +65,9 @@
           <div class="content content-1" style="border: none;">
             <p style="text-align: center;">
               <img src="img/about.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quos accusamus illum est recusandae repudiandae, modi aut officiis quam, exercitationem ipsum voluptates sequi at. Officia omnis temporibus repellat expedita.
+              The Boston Latin School Web Development Club is a space for BLS scholars to explore and learn about front-end web development. A revival of the original web development club, which ceased operations after senior members graduated, our hope is to provide the resources necessary for scholars to build their own portfolios, games, websites, and ultimately, to act as a community that collaborates to educate students about web development. Whether you are a complete beginner or an experienced programmer, all are welcome!
+              <br><br>
+              If there are any questions, you can contact us through our email, <b>bls.webdevclub@gmail.com</b>, or alternatively, you can ask one of our hard-working officers.
             </p>
           </div>
         </div>
