--- a/resources.html
+++ b/resources.html
@@ -20,9 +20,11 @@
         <img src="img/logo.png" alt="logo" class="logo">
     </a>
     <br><h1 class="header" style="color: #573393; text-align: center;">External Participation</h1><h3 style="text-align: center;">Events and Hackathons that we would like our members to partake in will be posted here.</h3><br><hr style="margin-left: 7%; width: 86%;"><br>
-    <h2 style="text-align: left; margin-top: 0%; margin-bottom: -2%; margin-left: 10%;">Current Events:</h2>
     <div class="cards-container">
       <div class="cards">
+        <div>
+          <h2 style="text-align: left; margin-top: 0%; margin-bottom: 0%;">Current Events:</h2>
+        </div>
         <div class="services">
           <div class="content content-1">
             <div class="pics"><img src="img/launchhacks.png"></div>
@@ -35,7 +37,9 @@
             <p>Apr 5 – 7, 2024</p>
           </div>
         </div>
-        <h2 style="text-align: left; margin-top: .25%; margin-bottom: 0%; margin-left: 3%;">Past Events:</h2>
+        <div>
+          <h2 style="text-align: left; margin-top: .25%; margin-bottom: 0%;">Past Events:</h2>
+        </div>
         <div class="services">
             <div class="content content-1">
               <div class="pics"><img src="img/codegreen.png"></div>
