--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <img src="img/logo.png" alt="logo" class="logo">
     </a>
     <br><h1 class="header" style="color: #573393; text-align: center;">Meet Our Officers</h1><br><hr style="margin-left: 7%; width: 86%;"><br>
-    <div class="cards-container">
+    <div class="cards-container" style="padding-left: 4.5%; padding-right: 4.5%;">
       <div class="cards">
         <div class="services">
           <div class="content content-2">
