--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>BLS - About</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="resources.css">
     <link href="img/favicon.ico" rel="icon">
 </head>
 <nav class="navbar">
