--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
           <div class="content content-1">
             <div></div>
             <h2>How Can I Get Started ?</h2>
-            <p>Getting started with us is very easy, we prioritize helping members make their first very own projects! Navigating to the resources page will lead you to various materials, including events we participate in, and guides on how to begin coding.</p>
+            <p>We prioritize helping members make their first very own projects! Navigating to the resources page will lead you to various materials, including events we participate in, and guides on how to begin coding.</p>
           </div>
         </div>
       </div><br>
